# calories

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/db/: database.py
app/foodstuffs/: exceptions.py  models.py  router.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: ee33a91f5816_initial_migration.py
app/scripts/: foodstuffs.sql
app/services/: base.py
