[tool.poetry]
name = "calories-app"
version = "0.1.0"
description = ""
authors = ["kuldm <kultyshev@nobr.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic = "^2.9.2"
uvicorn = "^0.31.1"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
